// Marketplace API — Database Schema v3 Final
// Render at: https://dbdiagram.io
// Copy & paste the entire content below into the editor

Table users {
  id                bigint        [pk, increment]
  name              varchar(255)  [not null]
  email             varchar(255)  [unique, not null]
  password          varchar(255)  [not null, note: "bcrypt hashed (12 rounds)"]
  role              enum          [not null, default: "customer", note: "customer | seller | admin"]
  is_active         boolean       [not null, default: true, note: "false = blocked, tokens revoked"]
  email_verified_at timestamp     [null]
  remember_token    varchar(100)  [null]
  created_at        timestamp     [null]
  updated_at        timestamp     [null]

  indexes {
    email [unique]
  }
}

Table wallets {
  id                bigint        [pk, increment]
  user_id           bigint        [not null, ref: > users.id]
  label             varchar(255)  [not null, default: "Default"]
  balance           decimal(14,2) [not null, default: 0.00]
  is_default        boolean       [not null, default: false]
  created_at        timestamp     [null]
  updated_at        timestamp     [null]

  indexes {
    user_id
  }
}

Table shops {
  id                bigint        [pk, increment]
  user_id           bigint        [not null, unique, ref: > users.id]
  shop_name         varchar(255)  [not null, unique]
  shop_description  text          [null]
  created_at        timestamp     [null]
  updated_at        timestamp     [null]
}

Table addresses {
  id                bigint        [pk, increment]
  user_id           bigint        [not null, ref: > users.id]
  label             varchar(100)  [not null, note: "e.g. Home, Office"]
  phone             varchar(30)   [null]
  address_line1     varchar(255)  [not null]
  address_line2     varchar(255)  [null]
  city              varchar(100)  [not null]
  province          varchar(100)  [not null]
  postal_code       varchar(20)   [not null]
  country           varchar(100)  [not null, default: "Philippines"]
  is_default        boolean       [not null, default: false]
  created_at        timestamp     [null]
  updated_at        timestamp     [null]
 
  indexes {
    user_id
  }
}

Table products {
  id                bigint        [pk, increment]
  shop_id           bigint        [not null, ref: > shops.id]
  name              varchar(255)  [not null]
  description       text          [null]
  price             decimal(12,2) [not null]
  stock             int           [not null, default: 0]
  tags              json          [null, note: "Array of strings e.g. [\"electronics\",\"gadget\"]"]
  is_active         boolean       [not null, default: true]
  deleted_at        timestamp     [null, note: "Soft delete — preserves historical order data"]
  created_at        timestamp     [null]
  updated_at        timestamp     [null]

  indexes {
    shop_id
    is_active
  }
}

Table orders {
  id                bigint        [pk, increment]
  customer_id       bigint        [not null, ref: > users.id]
  shop_id           bigint        [not null, ref: > shops.id, note: "One order row per shop"]
  address_id        bigint        [not null, ref: > addresses.id]
  wallet_id         bigint        [null, ref: > wallets.id]
  payment_method    enum          [not null, default: "wallet", note: "wallet|cod"]
  status            enum          [not null, default: "pending", note: "pending|shipped|delivered|cancelled|confirmed"]
  batch_ref         varchar(255)  [null, note: "Batch UUID for grouping orders placed together"]
  total_amount      decimal(14,2) [not null, default: 0]
  cancel_reason     int           [null, note: "Enum: 1=mind, 2=address, 3=dup, 4=delay, 5=other"]
  cancel_reason_notes varchar(255) [null, note: "Required if cancel_reason is 5"]
  shipped_at        timestamp     [null]
  delivered_at      timestamp     [null]
  cancel_at         timestamp     [null]
  completed_at      timestamp     [null]
  created_at        timestamp     [null]
  updated_at        timestamp     [null]

  indexes {
    customer_id
    shop_id
  }
}

Table order_items {
  id                bigint        [pk, increment]
  order_id          bigint        [not null, ref: > orders.id]
  product_id        bigint        [null, ref: > products.id]
  product_name      varchar(255)  [not null]
  unit_price        decimal(14,2) [not null]
  quantity          int           [not null]
  subtotal          decimal(14,2) [not null]
  created_at        timestamp     [null]
  updated_at        timestamp     [null]
}

Table carts {
  id                bigint        [pk, increment]
  customer_id       bigint        [not null, ref: > users.id]
  product_id        bigint        [not null, ref: > products.id]
  created_at        timestamp     [null]
  updated_at        timestamp     [null]

  indexes {
    (customer_id, product_id) [unique]
  }
}

Table wallet_transactions {
  id                bigint        [pk, increment]
  wallet_id         bigint        [not null, ref: > wallets.id]
  type              enum          [not null, note: "topup | purchase | refund | sales"]
  amount            decimal(14,2) [not null]
  balance_before    decimal(14,2) [not null, note: "Balance before this transaction"]
  balance_after     decimal(14,2) [not null, note: "Balance after this transaction"]
  reference_id      bigint        [null, note: "orders.id for purchase, refund, sales; null for topup"]
  status            varchar(50)   [not null, default: "on_hold", note: "on_hold | completed | refund"]
  description       text          [null]
  created_at        timestamp     [null, note: "No updated_at — immutable ledger"]
}

Table personal_access_tokens {
  id                bigint        [pk, increment]
  tokenable_type    varchar(255)  [not null]
  tokenable_id      bigint        [not null]
  name              varchar(255)  [not null]
  token             varchar(64)   [not null, unique, note: "SHA-256 hashed"]
  abilities         text          [null]
  last_used_at      timestamp     [null]
  expires_at        timestamp     [null, note: "Set to now() + 3 days on every token creation"]
  created_at        timestamp     [null]
  updated_at        timestamp     [null]
}
